force-app/main/default/objects/ERA_Discipline_Matrix__c/ERA_Discipline_Matrix__c.object-meta.xml
<CustomObject>
    <label>ERA Discipline Matrix</label>
    <nameField>
        <displayFormat>EDM-{00000}</displayFormat>
        <label>Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERA Discipline Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>