force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/Assessable_External_Body_Research_Report__c.field-meta.xml
<CustomField>
    <fullName>Assessable_External_Body_Research_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can&apos;t be suffixed with I_RS_ as the field name is too long</description>
    <label>Assessable-External Body Research Report</label>
    <type>Checkbox</type>
</CustomField>