force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/Assessable_Traditional_Outputs_By_Type__c.field-meta.xml
<CustomField>
    <fullName>Assessable_Traditional_Outputs_By_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can&apos;t be prefixed with I_RS as the field name is too long</description>
    <label>Assessable - Traditional Outputs By Type</label>
    <type>Checkbox</type>
</CustomField>