force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_6_digit_FOR_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_6_digit_FOR_Code__c</fullName>
    <label>6-digit FOR Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>