force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_Assessable_Other_NTRO__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Assessable_Other_NTRO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assessable - Other NTRO</label>
    <type>Checkbox</type>
</CustomField>