force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_Citation_Analysis__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Citation_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Citation Analysis</label>
    <type>Checkbox</type>
</CustomField>