force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_Cluster__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Cluster__c</fullName>
    <label>Cluster</label>
    <length>20</length>
    <type>Text</type>
</CustomField>