force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Code_Description__c</fullName>
    <label>Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>