force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_Code_Level__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Code_Level__c</fullName>
    <label>Code Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>