force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_NHMRC_Endorsed_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>I_RS_NHMRC_Endorsed_Guidelines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NHMRC Endorsed Guidelines</label>
    <type>Checkbox</type>
</CustomField>