force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_Peer_Review_Journal_Articles_age__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Peer_Review_Journal_Articles_age__c</fullName>
    <label>Peer Review - Journal Articles - %age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>