force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_PeerReview_Book_Chapters_Percentage__c.field-meta.xml
<CustomField>
    <fullName>I_RS_PeerReview_Book_Chapters_Percentage__c</fullName>
    <label>Peer Review - Book Chapters - Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>