force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_Plant_Breeder_s_Rights__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Plant_Breeder_s_Rights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plant Breeder&apos;s Rights</label>
    <type>Checkbox</type>
</CustomField>