force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_Registered_Designs__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Registered_Designs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registered Designs</label>
    <type>Checkbox</type>
</CustomField>