force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_Research_Commercialisation_Income__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Commercialisation_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Research Commercialisation Income</label>
    <type>Checkbox</type>
</CustomField>