force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_Staff_Data__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Staff_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff Data</label>
    <type>Checkbox</type>
</CustomField>