force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/I_RS_Threshold__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Threshold__c</fullName>
    <label>Threshold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50IJ</fullName>
            </value>
            <value>
                <fullName>50WO</fullName>
            </value>
            <value>
                <fullName>50IJ/50WO</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>