force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/Peer_Review_Conference_Publications_age__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Conference_Publications_age__c</fullName>
    <description>Field name an&apos;t be prefixed wth I_RS as it is too long</description>
    <label>Peer Review Conference Publications %age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>