force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/Research_Report_For_External_Body_age__c.field-meta.xml
<CustomField>
    <fullName>Research_Report_For_External_Body_age__c</fullName>
    <description>Field Name can&apos;t be appended with I_RS as it is too long</description>
    <label>Research Report For External Body %age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>