force-app/main/default/objects/ERA_Discipline_Matrix__c/fields/Traditional_Outputs_By_Outlet_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Traditional_Outputs_By_Outlet_Frequency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field Name can&apos;t have I_RS prefix as it is too long</description>
    <label>Traditional Outputs By Outlet Frequency</label>
    <type>Checkbox</type>
</CustomField>