force-app/main/default/objects/ERA_Discipline_Matrix__c/validationRules/Peer_Review_Book_Chapters_Percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>Peer_Review_Book_Chapters_Percentage</fullName>
    <active>true</active>
    <errorConditionFormula>OR( I_RS_PeerReview_Book_Chapters_Percentage__c &lt; 0.0, 
    I_RS_PeerReview_Book_Chapters_Percentage__c &gt; 1.0
   )</errorConditionFormula>
    <errorDisplayField>I_RS_PeerReview_Book_Chapters_Percentage__c</errorDisplayField>
    <errorMessage>Value can&apos;t be less than 0 or greater than 100</errorMessage>
</ValidationRule>