force-app/main/default/objects/ERA_Discipline_Matrix__c/validationRules/Peer_Review_Conference_Publications_age.validationRule-meta.xml
<ValidationRule>
    <fullName>Peer_Review_Conference_Publications_age</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Peer_Review_Conference_Publications_age__c &lt; 0.0,
Peer_Review_Conference_Publications_age__c &gt; 1.0
)</errorConditionFormula>
    <errorDisplayField>Peer_Review_Conference_Publications_age__c</errorDisplayField>
    <errorMessage>Value can&apos;t be less than 0 or greater than 100</errorMessage>
</ValidationRule>