force-app/main/default/objects/ERA_Discipline_Matrix__c/validationRules/Peer_Review_Journal_Articles_Percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>Peer_Review_Journal_Articles_Percentage</fullName>
    <active>true</active>
    <errorConditionFormula>OR( I_RS_Peer_Review_Journal_Articles_age__c &lt; 0.0,
I_RS_Peer_Review_Journal_Articles_age__c &gt; 1.0
)</errorConditionFormula>
    <errorDisplayField>I_RS_Peer_Review_Journal_Articles_age__c</errorDisplayField>
    <errorMessage>Value can&apos;t be less than 0 or greater than 100</errorMessage>
</ValidationRule>