force-app/main/default/objects/ERA_Discipline_Matrix__c/validationRules/Research_Report_For_External_Body_age.validationRule-meta.xml
<ValidationRule>
    <fullName>Research_Report_For_External_Body_age</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Research_Report_For_External_Body_age__c &lt; 0.0,
Research_Report_For_External_Body_age__c &gt; 1.0
)</errorConditionFormula>
    <errorDisplayField>Research_Report_For_External_Body_age__c</errorDisplayField>
    <errorMessage>Value can&apos;t be less than 0 or greater than 100</errorMessage>
</ValidationRule>