force-app/main/default/objects/ERA_Discipline_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Cluster__c</columns>
    <columns>I_RS_2_digit_FOR_Code__c</columns>
    <columns>I_RS_Code_Description__c</columns>
    <columns>I_RS_Code_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>